Fix menu centering on mobiles

--- a/themes/orbitor-hugo/assets/scss/templates/_navigation.scss
+++ b/themes/orbitor-hugo/assets/scss/templates/_navigation.scss
@@ -20,7 +20,8 @@
   white-space: nowrap;
 
  .nav-link{
-    padding-left: 26px;
+    padding-left: 13px;
+    padding-right: 13px;
     font-weight: 500;
     color: $violet;
     font-family: $primary-font;
